# orca

./: COOKBOOK.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
orca-cli/: Cargo.toml  README.md  build.rs
orca-cli/.github/workflows/: release.yml
orca-cli/src/: cli.rs  collection.rs  commands.rs  config.rs  git.rs  github.rs  lib.rs  main.rs  names.rs  setup.rs  sync.rs  theme.rs  workspace.rs
orca-cli/src/commands/: collection.rs  critique.rs  ls.rs  new.rs  rm.rs  status.rs  sync.rs
orca-cli/src/commands/critique/: diff.rs  format.rs  server.rs  types.rs
orca-cli/tests/: integration.rs
orca-review/: components.json  package.json  tsconfig.json  vite.config.ts
orca-review/commands/: critique.md
orca-review/ui/: App.tsx  app.css  index.html  types.ts
orca-review/ui/components/: DiffToggle.tsx  DiffViewer.tsx  FeedbackBar.tsx  FileList.tsx  FileTree.tsx  ViewStyleToggle.tsx
orca-review/ui/components/ui/: kbd.tsx
orca-review/ui/hooks/: useTheme.ts
orca-review/ui/lib/: fileTree.ts
plugins/orca/.claude-plugin/: plugin.json
plugins/orca/commands/: critique.md
