[package]
name = "orca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
ctrlc = "3"
ignore = "0.4"
notify = "6"
serde_json = "1.0.149"
tiny_http = "0.12"

[dev-dependencies]
serial_test = "3"
tempfile = "3.27.0"
